Fix layout problem in mobile media -2

--- a/src/assets/styles/components/_project.scss
+++ b/src/assets/styles/components/_project.scss
@@ -6,7 +6,7 @@
   grid-template-columns: 1fr;
   row-gap: 2rem;
   &__img {
-    width: 100%;
+    max-width: 100%;
     display: block;
 
     grid-row: 1 / 2;
